moved back test candles loading to strategies cache